unpackaged/main/default/objects/PR_Detail__c/PR_Detail__c.object-meta.xml
<CustomObject>
    <label>PR Detail</label>
    <nameField>
        <displayFormat>PRD- {00000}</displayFormat>
        <label>PR Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>