unpackaged/main/default/objects/PR_Detail__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To allow Finance to Approve or Reject the Line items</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>