unpackaged/main/default/objects/PR_Detail__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>PR Details</relationshipLabel>
    <relationshipName>PR_Details</relationshipName>
    <type>Lookup</type>
</CustomField>