unpackaged/main/default/objects/PR_Detail__c/fields/Campaign_Balance_USD__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Balance_USD__c</fullName>
    <description>Campaign Balance in USD</description>
    <formula>Campaign__r.Campaign_Balance_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Balance (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>