unpackaged/main/default/objects/PR_Detail__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <externalId>true</externalId>
    <label>Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>