unpackaged/main/default/objects/PR_Detail__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>