unpackaged/main/default/objects/PR_Detail__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>PR_Detail__c</referenceTo>
    <relationshipLabel>PR Details</relationshipLabel>
    <relationshipName>PR_Details</relationshipName>
    <type>Lookup</type>
</CustomField>