unpackaged/main/default/objects/PR_Detail__c/fields/CURRENCYRATE__c.field-meta.xml
<CustomField>
    <fullName>CURRENCYRATE__c</fullName>
    <description>Conversion rate from current record currency to USD</description>
    <formula>CURRENCYRATE(text(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CURRENCYRATE (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>