unpackaged/main/default/objects/PR_Detail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Write In - 140 Character Max
Ex: (State, Brand, Description, Month)</description>
    <inlineHelpText>Write In - 140 Character Max
Ex: (State, Brand, Description, Month)</inlineHelpText>
    <label>Description</label>
    <length>27</length>
    <type>Text</type>
</CustomField>