unpackaged/main/default/objects/PR_Detail__c/fields/EndMonth__c.field-meta.xml
<CustomField>
    <fullName>EndMonth__c</fullName>
    <label>End Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PRMonths</valueSetName>
    </valueSet>
</CustomField>