unpackaged/main/default/objects/PR_Detail__c/fields/Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved__c</fullName>
    <formula>IF(Approved__c,
IMAGE("/resource/1583214134000/Dollar_Approved", "Finance Approved",22,22),
IMAGE("/resource/1583214076000/Dollar_Rejected", "Finance Rejected",20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Approved</label>
    <type>Text</type>
</CustomField>