unpackaged/main/default/objects/PR_Detail__c/fields/GL_Code_Options__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Options__c</fullName>
    <label>GL Code Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributors (All Costs Eligible for BI)</fullName>
            </value>
            <value>
                <fullName>Retailers (All Costs EXCEPT Air &amp; Hotel Eligible for BI)</fullName>
            </value>
            <value>
                <fullName>BSI Employees (All Costs Opex)</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Window/Counter Wraps</fullName>
            </value>
            <value>
                <fullName>Racks</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Other (Specify in Comments)</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Whiskey Fest</fullName>
            </value>
            <value>
                <fullName>F&amp;W Fest</fullName>
            </value>
            <value>
                <fullName>Rebates Print</fullName>
            </value>
            <value>
                <fullName>Coupons Print</fullName>
            </value>
            <value>
                <fullName>Data Warehousing</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email Outbound Messaging</fullName>
            </value>
            <value>
                <fullName>Strategic use of Consumer Data</fullName>
            </value>
            <value>
                <fullName>Friends of Laphroaig</fullName>
            </value>
            <value>
                <fullName>Ambassadors</fullName>
            </value>
            <value>
                <fullName>Bartenders</fullName>
            </value>
            <value>
                <fullName>USBG</fullName>
            </value>
            <value>
                <fullName>Regular POS (e.g. T-Shirts, shot glasses, etc)</fullName>
            </value>
            <value>
                <fullName>Electronic (e.g. TV's, iPads, etc)</fullName>
            </value>
            <value>
                <fullName>Specialty Items (e.g. Grills, Golf Clubs, Leather Jackets, etc)</fullName>
            </value>
            <value>
                <fullName>Menus (Use GL 15333 Instead)</fullName>
            </value>
            <value>
                <fullName>Locally Packed VAP (Value Added Pack)</fullName>
            </value>
            <value>
                <fullName>BAGB (Buy A, Get B)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>