unpackaged/main/default/objects/PR_Detail__c/fields/GLDescription2__c.field-meta.xml
<CustomField>
    <fullName>GLDescription2__c</fullName>
    <label>GL Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GLAccountType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Fee – Consultants</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Design</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Digital</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Experiential</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Innovation</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Lead Creative</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Media</fullName>
            </value>
            <value>
                <fullName>Agency Fee – PR</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Shopper</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Talent</fullName>
            </value>
            <value>
                <fullName>Agency Fee – Technology Platform</fullName>
            </value>
            <value>
                <fullName>Analytics – Marketing Analytics</fullName>
            </value>
            <value>
                <fullName>Execution – Consumer Experience &amp; Personalization</fullName>
            </value>
            <value>
                <fullName>Misc – A&amp;P Expenses Recovered From 3rd Parties</fullName>
            </value>
            <value>
                <fullName>Misc – A&amp;P Translation FX</fullName>
            </value>
            <value>
                <fullName>Misc – BI I/C Rebill</fullName>
            </value>
            <value>
                <fullName>Misc – Other Brand Investment</fullName>
            </value>
            <value>
                <fullName>Misc – POS Freight &amp; Storage</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Consumer Promotions - POS Materials</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Consumer Promotions - Redemption</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Consumer Promotions - Sampling</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Consumer Promotions - Sweeps</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Display Installations</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Trade Promotions</fullName>
            </value>
            <value>
                <fullName>Off-Trade – Value Added Packaging</fullName>
            </value>
            <value>
                <fullName>On-Trade – Consumer Promotions - POS Materials</fullName>
            </value>
            <value>
                <fullName>On-Trade – Consumer Promotions - Print, Digital POS and Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>On-Trade – Consumer Promotions - Redemption</fullName>
            </value>
            <value>
                <fullName>On-Trade – Consumer Promotions - Sampling</fullName>
            </value>
            <value>
                <fullName>On-Trade – Consumer Promotions - Sweeps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>