unpackaged/main/default/objects/PR_Detail__c/fields/Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Header_Name__c</fullName>
    <formula>PR_Header__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Header Name</label>
    <type>Text</type>
</CustomField>