unpackaged/main/default/objects/PR_Detail__c/fields/Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Group__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>32010000</fullName>
                <default>true</default>
                <label>32010000</label>
            </value>
            <value>
                <fullName>35010201</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>