unpackaged/main/default/objects/PR_Detail__c/fields/OverAll_Status__c.field-meta.xml
<CustomField>
    <fullName>OverAll_Status__c</fullName>
    <formula>IF(
OR(
AND(PR_Header_Status__c='New',PR_Amount__c &gt; Campaign_Balance__c),
ROUND(PR_Amount_USD__c,2) &lt;&gt; ROUND(Phasing_Amount_USD__c,2),
Phasing_Records_Count__c=0,
ISBLANK(Description__c),
PR_Amount__c=0,
ISBLANK(TEXT(StartMonth__c)),
ISBLANK(TEXT(EndMonth__c)),
ISBLANK(TEXT(GLAccountType__c)),
ISBLANK(TEXT(GL_Code2__c)),
ISBLANK(TEXT(GLDescription2__c)),
ISBLANK(GL_Details__c)
),
FALSE,
TRUE
)</formula>
    <label>OverAll Status</label>
    <type>Checkbox</type>
</CustomField>