unpackaged/main/default/objects/PR_Detail__c/fields/Phasing_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Phasing_Amount_USD__c</fullName>
    <formula>Phasing_Amount__c / (CURRENCYRATE(text(CurrencyIsoCode)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phasing Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>