unpackaged/main/default/objects/PR_Detail__c/fields/Phasing_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Phasing_Records_Created__c</fullName>
    <formula>IF(Phasing_Records_Count__c  &gt; 0 , 
IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20),
IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phasing Records Created?</label>
    <type>Text</type>
</CustomField>