unpackaged/main/default/objects/PR_Detail__c/fields/Phasing_Type__c.field-meta.xml
<CustomField>
    <fullName>Phasing_Type__c</fullName>
    <label>Phasing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight Line</fullName>
                <default>true</default>
                <label>Straight Line</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>